Added post per config to package.json

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/Scionar/Humble#readme",
   "devDependencies": {
     "node-sass": "^4.8.3"
+  },
+  "config": {
+      "posts_per_page": 99
   }
 }
